--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Habibi&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <!-- google fonts  -->
@@ -22,7 +22,42 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <header class="header">
+      <div class="container">
+        <div class="header_wrapper row">
+          <a href="#" class="header_logo col-2">
+            <img src="./images/logo.svg" alt="" />
+          </a>
+          <ul
+            class="header_links col-9 d-flex align-items-center justify-content-center"
+          >
+            <li><a href="#">Автомобили</a></li>
+            <li><a href="#">Сервис</a></li>
+            <li><a href="#">Услуги</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <div
+            class="header_login col-1 d-flex align-items-center justify-content-end"
+          >
+            <a href="#">Войти</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="home">
+      <div class="container">
+        <div class="home_wrapper row">
+          <h1 class="col-8">TESLA ROADSTER УЖЕ В ПРОДАЖЕ</h1>
+          <a
+            class="home_link col-4 d-flex align-items-center justify-content-end"
+            href="#"
+            >Узнать подробнее
+            <img src="./images/icons/right_arrow-icon.svg" alt=""
+          /></a>
+        </div>
+      </div>
+    </section>
     <!-- bootstrap js  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
