--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       crossorigin="anonymous"
     />
     <!-- bootstrap  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <!-- swiper js  -->
     <title>Document</title>
   </head>
   <body>
@@ -65,6 +70,89 @@
         </div>
       </div>
     </section>
+    <div class="carousel">
+      <div class="container">
+        <div class="carousel_wrapper">
+          <h2 class="carousel_title">Специальные предложения</h2>
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="swiper_img">
+                  <img src="./images/carousel-images/1.png" alt="" />
+                </div>
+                <div class="about_car">
+                  <h4>BMW 730i</h4>
+                  <div class="car_p">
+                    <p>Мощнtость двигателя: <span>249 </span>л.с.</p>
+                    <p>Расход топлива: <span>7 л/100 </span>км</p>
+                    <p>Разгон 0-100 км/ч : <span>6,5 </span>c</p>
+                    <p>Привод задний</p>
+                    <p>От <span>12 799 000</span> ₽</p>
+                  </div>
+                  <div class="about_car_link">
+                    <a href="#"
+                      >Узнать подробнее
+                      <img src="./images/icons/right_arrow-icon.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper_img">
+                  <img src="./images/carousel-images/1.png" alt="" />
+                </div>
+                <div class="about_car">
+                  <h4>BMW 730i</h4>
+                  <div class="car_p">
+                    <p>Мощнtость двигателя: <span>249 </span>л.с.</p>
+                    <p>Расход топлива: <span>7 л/100 </span>км</p>
+                    <p>Разгон 0-100 км/ч : <span>6,5 </span>c</p>
+                    <p>Привод задний</p>
+                    <p>От <span>12 799 000</span> ₽</p>
+                  </div>
+                  <div class="about_car_link">
+                    <a href="#"
+                      >Узнать подробнее
+                      <img src="./images/icons/right_arrow-icon.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper_img">
+                  <img src="./images/carousel-images/1.png" alt="" />
+                </div>
+                <div class="about_car">
+                  <h4>BMW 730i</h4>
+                  <div class="car_p">
+                    <p>Мощнtость двигателя: <span>249 </span>л.с.</p>
+                    <p>Расход топлива: <span>7 л/100 </span>км</p>
+                    <p>Разгон 0-100 км/ч : <span>6,5 </span>c</p>
+                    <p>Привод задний</p>
+                    <p>От <span>12 799 000</span> ₽</p>
+                  </div>
+                  <div class="about_car_link">
+                    <a href="#"
+                      >Узнать подробнее
+                      <img src="./images/icons/right_arrow-icon.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-bottom">
+              <div class="swiper-button-prevv">
+                <img src="./images/icons/right_arrow-icon.svg" alt="" />
+              </div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-nextt">
+                <img src="./images/icons/right_arrow-icon.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer">
       <div class="container">
         <div class="footer_wrapper row">
@@ -104,11 +192,15 @@
         </div>
       </div>
     </footer>
+
     <!-- bootstrap js  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <!-- swiper js  -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
