--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
     <title>Document</title>
   </head>
   <body>
-    
-
-
-
-
 
     <header class="header">
       <div class="container">
@@ -53,6 +48,7 @@
         </div>
       </div>
     </header>
+    <!--  -->
     <section class="home">
       <div class="container">
         <div class="home_wrapper row">
@@ -67,7 +63,7 @@
       </div>
     </section>
 
- <!-- dropdown -->
+    <!-- dropdown -->
 
     <section class="drop_down">
       <div class="dropdown_control">
@@ -112,7 +108,6 @@
     </section>
 
 <!-- collections -->
-  
   <div class="colletions_area">
       <div class="container">
         <div class="collections_item">
@@ -162,6 +157,43 @@
         </div>
       </div>
   </div>
+  <!-- location -->
+  <section class="location_bc">
+    <!--  -->
+      <div class="location_wrapper">
+        <!--  -->
+        <div class="text_line ">
+          <!--  -->
+            <div class="top">
+              <h5>
+                Как до нас добраться?
+              </h5>
+
+              <p>
+                Мы находимся в 7-10 минутах пешком от станции
+                Выставочна по адресу:  Шмитовский проезд, 24А
+              </p>
+            </div>
+          <!--  -->
+          <div class="btm">
+            <h5>Мы в соц.сетях:</h5>
+
+            <div class="links_pg">
+              <a href="">Instagram: YOURCAR.MOSCOW</a>
+              <br>
+              <a href="">VK: vk.ru/yourcar</a>
+              <br>
+              <a href="">TELEGRAM: t.me/YOURCAR.MOSCOW</a>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <div class="img_line">
+          <img src="images/img8.png" alt="">
+        </div>
+      </div>
+  </section>
+  <!-- footer -->
   <footer class="footer">
     <div class="container">
       <div class="footer_wrapper row">
