--- a/index.html
+++ b/index.html
@@ -201,38 +201,33 @@
         </div>
       </div>
     </div>
-    <!-- <div class="colletions_area">
+    <div class="colletions">
       <div class="container">
-        <div class="collections_item">
-          <h1>Подборки</h1>
-          <div class="collections">
-            <div class="collect">
-              <img src="../images/icons/image2.svg" alt="" />
-              <h4>Перейти к каталогу</h4>
-            </div>
-
-            <div class="collect">
-              <img src="../images/icons/image3.svg" alt="" />
-              <h4>Рассчитать кредит</h4>
-            </div>
-
-            <div class="collect">
-              <img src="../images/icons/image4.svg" alt="" />
-              <h4>Получить страховку</h4>
-            </div>
-
-            <div class="collect">
-              <img src="../images/icons/image5.svg" alt="" />
-              <h4>Пройти тест-драйв</h4>
-            </div>
-            <div class="collect">
-              <img src="../images/icons/image6.svg" alt="" />
-              <h4>Записаться на сервис</h4>
-            </div>
+        <div class="collections_wrapper row">
+          <h2 class="colletions_title">Подборки</h2>
+          <div class="card-1 col-2 ">
+            <img src="./images/icons/image2.svg" alt="" />
+            <h4>Перейти к каталогу</h4>
+          </div>
+          <div class="card-1 col-2 ">
+            <img src="./images/icons/image2.svg" alt="" />
+            <h4>Перейти к каталогу</h4>
+          </div>
+          <div class="card-1 col-2 ">
+            <img src="./images/icons/image2.svg" alt="" />
+            <h4>Перейти к каталогу</h4>
+          </div>
+          <div class="card-1 col-2 ">
+            <img src="./images/icons/image2.svg" alt="" />
+            <h4>Перейти к каталогу</h4>
+          </div>
+          <div class="card-1 col-2 ">
+            <img src="./images/icons/image2.svg" alt="" />
+            <h4>Перейти к каталогу</h4>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <footer class="footer">
       <div class="container">
