--- a/index.html
+++ b/index.html
@@ -67,53 +67,55 @@
       </div>
     </section>
     <section class="drop_down">
-      <div class="dropdown_control">
-        <div class="for_text">
-          <h1>Подбор автомобиля</h1>
-
-          <div class="dropdown_item">
-            <!--  -->
-            <div class="dropdown">
-              <button
-                class="drop_button_one dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Выбор марки
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
+      <div class="container">
+        <div class="dropdown_control">
+          <div class="for_text">
+            <h1>Подбор автомобиля</h1>
+  
+            <div class="dropdown_item">
+              <!--  -->
+              <div class="dropdown">
+                <button
+                  class="drop_button_one dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Выбор марки
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
+              </div>
+              <!--  -->
+              <div class="dropdown">
+                <button
+                  class="drop_button_one dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Выбор кузова
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
+              </div>
+              <!--  -->
+              <button class="drop_button">Цена от</button>
+              <!--  -->
+              <button class="drop_button">Цена до</button>
+              <!--  -->
+              <button class="drop_select">Показать</button>
             </div>
-            <!--  -->
-            <div class="dropdown">
-              <button
-                class="drop_button_one dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Выбор кузова
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </div>
-            <!--  -->
-            <button class="drop_button">Цена от</button>
-            <!--  -->
-            <button class="drop_button">Цена до</button>
-            <!--  -->
-            <button class="drop_select">Показать</button>
           </div>
         </div>
       </div>
@@ -203,31 +205,83 @@
     </div>
     <div class="colletions">
       <div class="container">
-        <div class="collections_wrapper row">
-          <h2 class="colletions_title">Подборки</h2>
-          <div class="card-1 col-2 ">
+        <h2 class="colletions_title ">Подборки</h2>
+        <div class="collections_wrapper row d-flex justify-content-between align-items-start">
+          <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
             <img src="./images/icons/image2.svg" alt="" />
-            <h4>Перейти к каталогу</h4>
-          </div>
-          <div class="card-1 col-2 ">
-            <img src="./images/icons/image2.svg" alt="" />
-            <h4>Перейти к каталогу</h4>
-          </div>
-          <div class="card-1 col-2 ">
-            <img src="./images/icons/image2.svg" alt="" />
-            <h4>Перейти к каталогу</h4>
-          </div>
-          <div class="card-1 col-2 ">
-            <img src="./images/icons/image2.svg" alt="" />
-            <h4>Перейти к каталогу</h4>
-          </div>
-          <div class="card-1 col-2 ">
-            <img src="./images/icons/image2.svg" alt="" />
-            <h4>Перейти к каталогу</h4>
-          </div>
+            <h4>
+              Перейти 
+              к каталогу
+            </h4>
+          </a>
+          <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
+            <img src="./images/icons/card2.png" alt="" />
+            <h4>
+              Рассчитать
+              кредит
+            </h4>
+          </a>
+          <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
+            <img src="./images/icons/card3.png" alt="" />
+            <h4>
+              Получить 
+              страховку
+            </h4>
+          </a>
+          <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
+            <img src="./images/icons/card4.png" alt="" />
+            <h4>
+              Пройти
+              тест-драйв
+            </h4>
+          </a>
+          <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
+            <img src="./images/icons/card5.png" alt="" />
+            <h4>
+              Записаться 
+              на сервис
+            </h4>
+          </a>
         </div>
       </div>
     </div>
+
+    <!-- location -->
+    <section class="location_bc">
+      <!--  -->
+        <div class="location_wrapper">
+          <!--  -->
+          <div class="text_line ">
+            <!--  -->
+              <div class="top">
+                <h5>
+                  Как до нас добраться?
+                </h5>
+
+                <p>
+                  Мы находимся в 7-10 минутах пешком от станции
+                  Выставочна по адресу:  Шмитовский проезд, 24А
+                </p>
+              </div>
+            <!--  -->
+            <div class="btm">
+              <h5>Мы в соц.сетях:</h5>
+
+              <div class="links_pg">
+                <a href="">Instagram: YOURCAR.MOSCOW</a>
+                <br>
+                <a href="">VK: vk.ru/yourcar</a>
+                <br>
+                <a href="">TELEGRAM: t.me/YOURCAR.MOSCOW</a>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <div class="img_line">
+            <img src="images/img8.png" alt="">
+          </div>
+        </div>
+    </section>
 
     <footer class="footer">
       <div class="container">
