--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <!-- swiper js  -->
-    <title>Document</title>
+    <title>YourCar</title>
   </head>
   <body>
     <header class="header">
@@ -66,55 +66,103 @@
         </div>
       </div>
     </section>
-    <section class="drop_down">
+    <!-- Filter -->
+    <section class="filter">
       <div class="container">
-        <div class="dropdown_control">
-          <div class="for_text">
-            <h1>Подбор автомобиля</h1>
-  
-            <div class="dropdown_item">
-              <!--  -->
-              <div class="dropdown">
-                <button
-                  class="drop_button_one dropdown-toggle"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Выбор марки
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
+        <div class="filter_wrapper">
+          <h1 class="filter_title">Подбор автомобиля</h1>
+          <div class="row justify-content-center filter_wrap_in">
+            <div class="col-11 col-sm-9 col-md-5 col-lg-2 m-1 m-lg-0 bg-white">
+              <div class="custom-select">
+                <div class="select-box" onclick="toggleDropdown()">
+                  <span>Выбор марки</span>
+                  <span class="select-arrow"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="11"
+                      viewBox="0 0 16 11"
+                      fill="none"
+                    >
+                      <path
+                        id="Vector 1"
+                        d="M1.13687 1.33032L8.0035 8.91976L14.5087 1.33032"
+                        stroke="black"
+                        stroke-width="1.44561"
+                      />
+                    </svg>
+                  </span>
+                </div>
+                <div class="select-options" id="options">
+                  <div class="select-option" onclick="selectOption('BMW')">
+                    BMW
+                  </div>
+                  <div class="select-option" onclick="selectOption('TESLA')">
+                    TESLA
+                  </div>
+                  <div class="select-option" onclick="selectOption('DODGE')">
+                    DODGE
+                  </div>
+                </div>
               </div>
-              <!--  -->
-              <div class="dropdown">
-                <button
-                  class="drop_button_one dropdown-toggle"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Выбор кузова
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
+            </div>
+            <div class="col-11 col-sm-9 col-md-5 col-lg-2 m-1 m-lg-0 bg-white">
+              <div class="custom-select">
+                <div class="select-box-kuziv" onclick="toggleDropdownKuziv()">
+                  <span>Выбор кузова</span>
+                  <span class="select-arrow"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="11"
+                      viewBox="0 0 16 11"
+                      fill="none"
+                    >
+                      <path
+                        id="Vector 1"
+                        d="M1.13687 1.33032L8.0035 8.91976L14.5087 1.33032"
+                        stroke="black"
+                        stroke-width="1.44561"
+                      />
+                    </svg>
+                  </span>
+                </div>
+                <div class="select-options" id="optionsKuziv">
+                  <div
+                    class="select-option"
+                    onclick="selectOptionKuziv('КУПЕ')"
+                  >
+                    КУПЕ
+                  </div>
+                  <div
+                    class="select-option"
+                    onclick="selectOptionKuziv('КРОССОВЕР')"
+                  >
+                    КРОССОВЕР
+                  </div>
+                  <div
+                    class="select-option"
+                    onclick="selectOptionKuziv('УНИВЕРСАЛ')"
+                  >
+                    УНИВЕРСАЛ
+                  </div>
+                  <div
+                    class="select-option"
+                    onclick="selectOptionKuziv('СЕДАН')"
+                  >
+                    СЕДАН
+                  </div>
+                </div>
               </div>
-              <!--  -->
-              <button class="drop_button">Цена от</button>
-              <!--  -->
-              <button class="drop_button">Цена до</button>
-              <!--  -->
-              <button class="drop_select">Показать</button>
+            </div>
+            <div class="col-11 col-sm-9 col-md-5 col-lg-2 m-1 m-lg-0 bg-white">
+              <input type="number" class="filter_input" placeholder="Цена от" />
+            </div>
+            <div class="col-11 col-sm-9 col-md-5 col-lg-2 m-1 m-lg-0 bg-white">
+              <input type="number" class="filter_input" placeholder="Цена от" />
+            </div>
+            <div class="col-11 col-sm-9 col-md-6 col-lg-2 m-1 m-lg-0 bg-white">
+              <button class="filter_btn">Показать</button>
             </div>
           </div>
         </div>
@@ -205,82 +253,131 @@
     </div>
     <div class="colletions">
       <div class="container">
-        <h2 class="colletions_title ">Подборки</h2>
-        <div class="collections_wrapper row d-flex justify-content-between align-items-start">
+        <h2 class="colletions_title">Подборки</h2>
+        <div
+          class="collections_wrapper row d-flex justify-content-between align-items-start"
+        >
           <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
             <img src="./images/icons/image2.svg" alt="" />
-            <h4>
-              Перейти 
-              к каталогу
-            </h4>
+            <h4>Перейти к каталогу</h4>
           </a>
           <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
             <img src="./images/icons/card2.png" alt="" />
-            <h4>
-              Рассчитать
-              кредит
-            </h4>
+            <h4>Рассчитать кредит</h4>
           </a>
           <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
             <img src="./images/icons/card3.png" alt="" />
-            <h4>
-              Получить 
-              страховку
-            </h4>
+            <h4>Получить страховку</h4>
           </a>
           <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
             <img src="./images/icons/card4.png" alt="" />
-            <h4>
-              Пройти
-              тест-драйв
-            </h4>
+            <h4>Пройти тест-драйв</h4>
           </a>
           <a href="#" class="card-1 col-sm-12 col-md-6 col-lg-2">
             <img src="./images/icons/card5.png" alt="" />
-            <h4>
-              Записаться 
-              на сервис
-            </h4>
+            <h4>Записаться на сервис</h4>
           </a>
         </div>
       </div>
     </div>
+    <div class="contact">
+      <div class="container">
+        <div class="contact_wrapper">
+          <h2 class="contact_title text-light">
+            Есть вопрос? Будем рады ответить на него!
+          </h2>
+          <form class="row mt-5">
+            <div class="left_inputs mb-3 col-md-6">
+              <label for="exampleInputEmail1" class="form-label text-light"
+                >Ваше имя :</label
+              >
+              <input
+                type="text"
+                class="form-control mt-2 input-1"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="Иван Иванов"
+              />
+              <label for="exampleInputEmail1" class="form-label text-light"
+                >Ваш e-mail:</label
+              >
+              <input
+                type="email"
+                class="form-control mt-2"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="ivanov@gmail.com"
+              />
+            </div>
+            <div class="textarea col-md-6">
+              <label for="exampleInputEmail1" class="form-label text-light"
+                >Ваш комментарий:</label
+              >
 
+              <textarea
+                class="form-control mt-2"
+                placeholder="Текст обращения"
+                id="floatingTextarea2"
+              ></textarea>
+            </div>
+            <div class="form_btn col-12 text-center">
+              <button class="mt-4">Отправить</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
     <!-- location -->
-    <section class="location_bc">
-      <!--  -->
-        <div class="location_wrapper">
-          <!--  -->
-          <div class="text_line ">
-            <!--  -->
-              <div class="top">
-                <h5>
-                  Как до нас добраться?
-                </h5>
-
-                <p>
-                  Мы находимся в 7-10 минутах пешком от станции
-                  Выставочна по адресу:  Шмитовский проезд, 24А
-                </p>
-              </div>
-            <!--  -->
-            <div class="btm">
-              <h5>Мы в соц.сетях:</h5>
-
-              <div class="links_pg">
-                <a href="">Instagram: YOURCAR.MOSCOW</a>
-                <br>
-                <a href="">VK: vk.ru/yourcar</a>
-                <br>
-                <a href="">TELEGRAM: t.me/YOURCAR.MOSCOW</a>
-              </div>
+    <section class="location">
+      <div class="container">
+        <div class="location_wrapper row">
+          <div class="location_text col-lg-6">
+            <h3>Как до нас добраться?</h3>
+            <p class="mt-3">
+              Мы находимся в 7-10 минутах пешком от станции Выставочна по
+              адресу: Шмитовский проезд, 24А
+            </p>
+            <h3 style="padding-top: 90px" class="mb-4 social">
+              Мы в соц.сетях:
+            </h3>
+            <div class="social_links">
+              <h6>VK: vk.ru/yourcar</h6>
+              <h6>Instagram: YOURCAR.MOSCOW</h6>
+              <h6>TELEGRAM: t.me/YOURCAR.MOSCOW</h6>
             </div>
           </div>
-          <!--  -->
-          <div class="img_line">
-            <img src="images/img8.png" alt="">
+          <div class="location_map col-lg-6">
+            <div style="position: relative; overflow: hidden">
+              <a
+                href="https://yandex.uz/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 0px;
+                "
+              ></a
+              ><a
+                href="https://yandex.uz/maps/213/moscow/?feedback=map%2Fedit&feedback-context=map.context&indoorLevel=1&ll=37.622048%2C55.756784&utm_medium=mapframe&utm_source=maps&z=17.32"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 14px;
+                "
+                >Yandex Xarita</a
+              ><iframe
+                src="https://yandex.uz/map-widget/v1/?feedback=map%2Fedit&feedback-context=map.context&indoorLevel=1&ll=37.622048%2C55.756784&z=17.32"
+                width="560"
+                height="413"
+                frameborder="1"
+                allowfullscreen="true"
+                style="position: relative"
+              ></iframe>
+            </div>
           </div>
         </div>
+      </div>
     </section>
 
     <footer class="footer">
